src/objects/Product_Dealer__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Id</label>
        <referenceTo>Dealer__c</referenceTo>
        <relationshipLabel>Product_Dealers</relationshipLabel>
        <relationshipName>Product_Dealers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductDealerId__c</fullName>
        <displayFormat>PD-{0000}</displayFormat>
        <label>ProductDealerId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Id</label>
        <referenceTo>CompanyProductDetails__c</referenceTo>
        <relationshipLabel>Product_Dealers</relationshipLabel>
        <relationshipName>Product_Dealers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stock_Left__c</fullName>
        <label>Stock Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product_Dealer</label>
    <nameField>
        <label>Product Dealer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product_Dealers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>